syntax = "proto3";

package token;

option go_package = "./";

// Token service definition
service TokenProtoService {
    rpc GetTokens(GetTokensRequest) returns (GetTokensResponse) {}
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
    rpc PostToken(PostTokenRequest) returns (PostTokenResponse) {}
    rpc PutToken(PutTokenRequest) returns (PutTokenResponse) {}
    rpc DeleteToken(DeleteTokenRequest) returns (DeleteTokenResponse) {}
    rpc PostValidateToken(PostValidateTokenRequest) returns (PostValidateTokenResponse) {}
}

message GetTokensRequest {
    uint32 chain_id = 1;
}

message GetTokensResponse {
    message Token {
        uint32 id = 1;
        string address = 2;
        string symbol = 3;
        int32 decimals = 4;
        uint64 total_supply = 5;
        string name = 6;
        string description = 7;
        uint32 chain_id = 8;
    }
    repeated Token tokens = 1;
}

message GetTokenRequest {
    uint32 id = 1;
    string address = 2;
    string symbol = 3;
}

message GetTokenResponse {
    uint32 id = 1;
    string address = 2;
    string symbol = 3;
    int32 decimals = 4;
    uint64 total_supply = 5;
    string name = 6;
    string description = 7;
    uint32 chain_id = 8;
}

message PostTokenRequest {
    string address = 1;
    string symbol = 2;
    int32 decimals = 3;
    uint64 total_supply = 4;
    string name = 5;
    string description = 6;
    uint32 chain_id = 7;
}

message PostTokenResponse {
    uint32 id = 1;
}

message PutTokenRequest {
    uint32 id = 1;
    optional string address = 2;
    optional string symbol = 3;
    optional string name = 4;
    optional string description = 5;
    optional uint32 chain_id = 6;
}

message PutTokenResponse {
    uint32 id = 1;
}

message DeleteTokenRequest {
    uint32 id = 1;
}

message DeleteTokenResponse {
    uint32 id = 1;
}

message PostValidateTokenRequest {
    uint32 id = 1;
}

message PostValidateTokenResponse {
    uint32 id = 1;
}
